dark mode fixed

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -402,3 +402,17 @@ button {
 .title-directory h1 {
   text-align: center;
 }
+
+
+/* Light mode styles */
+/* body {
+  background-color: #ffffff;
+  color: #333333;
+} */
+
+/* Dark mode styles */
+body.dark-mode {
+  background-color: #333333;
+  /* color: #ffffff; */
+}
+
